# agent-sdk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  openapi.yaml
.github/workflows/: ci.yml
clients/go/: README.md  agent.go  agent_test.go  client.go  client_test.go  go.mod  sse_internal_test.go  stream.go  stream_test.go  training.go  training_test.go  types.go
clients/python/: README.md  pyproject.toml
clients/python/src/contextgrip_ai_chat/: __init__.py  _sse.py  client.py  errors.py  models.py
clients/python/tests/: conftest.py  stub_server.py  test_agent.py  test_client.py  test_sse_parser.py  test_stream.py  test_training.py
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: index.ts  sse.ts  types.ts
clients/typescript/test/: agent.test.js  client.test.js  sse.test.js  stream.test.js  stub.js  training.test.js
server/: README.md  go.mod  go.sum
server/cmd/ai-chat/: main.go
server/internal/api/: agent.go  agent_test.go  approvals.go  approvals_test.go  auth.go  auth_test.go  chat.go  chat_test.go  conversations.go  helpers.go  metrics.go  server.go  system.go  system_test.go  tasks.go  tasks_test.go  testutil_test.go  tokens.go  training.go  training_test.go
server/internal/approvalstore/: store.go  store_test.go
server/internal/assistant/: agent.go  assistant.go  assistant_test.go
server/internal/chatstore/: store.go  store_test.go
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  styles.css
(+29 files in other folders)
