[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextgrip-ai-chat"
version = "0.1.0"
description = "Python client for the ContextGrip AI Chat API (NL->SQL chat over your own PostgreSQL)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "ContextGrip" }]
keywords = ["contextgrip", "postgresql", "nl2sql", "chat", "sse"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/contextgrip-io/agent-sdk"
Source = "https://github.com/contextgrip-io/agent-sdk/tree/main/clients/python"

[tool.hatch.build.targets.wheel]
packages = ["src/contextgrip_ai_chat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
